@@ -9,6 +9,8 @@ Version 0.7.1 UNRELASED
 
     * Remove unused function serialize_pattern_list()
 
+    * Remove unused function wcsempty()
+
 
 [2015-07-25]
 Version 0.7
